idp/dependencies/notused/keycloak/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ui
  namespace: keycloak
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.cnoe.localtest.me
      http:
        paths:
          - backend:
              service:
                name: keycloak-service
                port:
                  name: http
            path: /
            pathType: Prefix
